# aosta-rust

./: Cargo.toml  notes.md
sample_data/: temp2.json  test_aosta_payload.json
src/: lib.rs  models.rs  validation.rs
src/models/: insured_info.rs  lab_record.rs  lifestyle_condition.rs  medical_record.rs  request.rs  requirements.rs  rx_record.rs  test_record.rs
src/validation/: cache.rs  errors.rs
