[package]
name = "medical-record-validator"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
tokio = { version = "1.46", features = ["full"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

multer = "3.0"

tiberius = { version = "0.12", features = ["chrono", "rustls"] }
tokio-util = { version = "0.7", features = ["compat"] }

chrono = { version = "0.4", features = ["serde"] }

validator = { version = "0.20", features = ["derive"] }

anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = "0.3"

tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

jsonschema = "0.32"

uuid = { version = "1.0", features = ["serde"] }
